Improved mobile and desktop - Showing correct button on mobile - Showing and hiding player-element on play/pause on mobile - Improved playback on desktop, not stopping videoes if they're skipped while one is loading/buffering - Small player visual-fixes on mobile

--- a/server/public/assets/css/style.css
+++ b/server/public/assets/css/style.css
@@ -2976,7 +2976,10 @@ nav ul li:hover, nav ul li.active {
         height: calc(30vh);
         bottom: -33px !important;
         top: initial;
-        display: none !important;
+        width: 100vw;
+        height: 200px;
+        pointer-events: all;
+        display: none;
     }
 
     #wrapper{
@@ -3080,6 +3083,7 @@ nav ul li:hover, nav ul li.active {
     #player{
         height: calc(100%);
         display:none;
+        width: 100vw;
     }
 
     .hide-on-small-only{
